added score to team, fixxed style
