# sf.Server/Models/SF/TeamModel.cs
@@ -8,9 +8,12 @@ public class TeamModel : Entity<Guid>
     [JsonProperty("Students"), ForeignKey(nameof(UserModel.TeamId))]
     public ICollection<UserModel> Users { get; set; } = new List<UserModel>();
     
-    [JsonProperty(nameof(DisciplineId)), ForeignKey(nameof(DisciplineModel.Id))]
+    [JsonProperty(nameof(DisciplineId)), ForeignKey(nameof(Id))]
     public Guid DisciplineId { get; set; } = Guid.Empty;
     
     [JsonProperty(nameof(Discipline))]
     public DisciplineModel? Discipline { get; set; } = null!;
+    
+    [JsonProperty("Points")]
+    public int Score { get; set; } = 0;
 }
